# HirePilot-AI

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py  app.py
backend/ai/: groq_client.py
backend/core/: config.py  prompts.py
backend/data/: interviews.json
backend/graph/: graph.py  nodes.py
backend/guidelines/: interview_guidelines.md
backend/models/: __init__.py  interview.py  planner.py  report.py  state.py  understanding.py
backend/prompts/: evaluator.md  interviewer.md  planner.md  reporter.md  understanding_system.md  understanding_user.md
backend/retrieval/: __init__.py  chunking.py  embeddings.py  faiss_store.py
backend/samples/: sample_jd.txt  sample_resume.txt
backend/scripts/: __init__.py  evaluate_answer.py  live_interview.py  plan_interview.py  query_retriever.py  raw_voice_loop.py  run_interview_graph.py  test_speaker.py  understand_resume_jd.py
backend/services/: evaluation.py  interview.py  persistence.py  planner.py  report.py  retriever_node.py  understanding.py
backend/tests/: test_app_demo.py  test_report_and_persistence.py
backend/voice/: __init__.py  audio_io.py  stt.py  tts.py
frontend/: index.html
